# opengl_practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
src/: CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  gameManager.cpp  gameManager.h
src/RenderEngine/: CMakeLists.txt  displayManager.cpp  displayManager.h
src/RenderEngine/src/: displayManager.cpp
